--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </style>
 </head>
 <body>
-  <div class="intro-screen" id="intro-screen">click to enter <3</div>
+  <div class="intro-screen" id="intro-screen">click to enter ⛧</div>
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Ken%20Carson%20-%20LiveLeak%20(Audio)%20-%20Trim.mp4" type="video/mp4">
   </video>
