--- a/index.html
+++ b/index.html
@@ -35,22 +35,20 @@
     }
     .intro-screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: auto;
+      height: auto;
       background: #000;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       font-size: 2rem;
       cursor: pointer;
       transition: opacity .5s ease;
       z-index: 100;
       text-shadow: 0 0 10px #fff, 0 0 20px #ff0000;
       animation: pulseGlow 2s infinite ease-in-out;
+      white-space: nowrap;
     }
     .intro-screen span {
       font-size: 2rem;
@@ -198,7 +196,7 @@
       pointer-events: none;
       z-index: 9999;
       box-shadow: 0 0 10px #fff, 0 0 20px #ff0000, 0 0 30px #ff0000;
-      animation: sparkleFade 1s ease-out forwards;
+      animation: sparkleFade 0.8s ease-out forwards;
     }
     @keyframes sparkleFade {
       0% {
@@ -214,7 +212,7 @@
 </head>
 <body>
   <div class="intro-screen" id="intro-screen">
-    <span>click </span><span class="pentagram">⛧</span><span> anywhere</span>
+    <span>click anywhere ⛧</span>
   </div>
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Ken%20Carson%20-%20LiveLeak%20(Audio)%20-%20Trim.mp4" type="video/mp4">
@@ -262,7 +260,7 @@
       document.body.appendChild(sparkle);
       sparkle.style.left = `${e.clientX}px`;
       sparkle.style.top = `${e.clientY}px`;
-      setTimeout(() => sparkle.remove(), 1000);
+      setTimeout(() => sparkle.remove(), 800);
     });
 
     setInterval(() => {
