--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <title>⛧ juju.wtf</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 0;
@@ -44,13 +42,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 2.5rem;
+      font-size: 3rem;
       cursor: pointer;
       transition: opacity .5s ease;
       z-index: 100;
-      text-shadow: 0 0 12px #fff, 0 0 25px #ff0000;
-      animation: pulseGlow 1.6s infinite ease-in-out;
       white-space: nowrap;
+      animation: pulseGlow 1.2s infinite ease-in-out;
+      text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 28px #ff0000, 0 0 50px #ff0000;
     }
     .hidden {
       opacity: 0;
@@ -74,26 +72,24 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0000, 0 0 30px #ff0000;
-      animation: pulseGlow 1.6s infinite ease-in-out;
+      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #ff0000, 0 0 60px #ff0000;
+      animation: pulseGlow 1.2s infinite ease-in-out;
     }
     .title {
-      font-size: 2rem;
+      font-size: 2.2rem;
       text-transform: lowercase;
       letter-spacing: .1rem;
       position: relative;
-      transition: transform .3s ease, opacity .5s ease;
-      animation: pulseGlow 1.6s infinite ease-in-out;
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0000, 0 0 30px #ff0000;
-      height: 2.4rem;
-      line-height: 2.4rem;
+      animation: pulseGlow 1.2s infinite ease-in-out;
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #ff0000, 0 0 60px #ff0000;
+      transition: transform .25s ease, opacity .25s ease;
     }
     @keyframes pulseGlow {
       0%, 100% {
-        text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 28px #ff0000, 0 0 40px #ff0000;
+        text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 28px #ff0000, 0 0 50px #ff0000;
       }
       50% {
-        text-shadow: 0 0 14px #fff, 0 0 28px #fff, 0 0 40px #ff0000, 0 0 50px #ff0000;
+        text-shadow: 0 0 12px #fff, 0 0 24px #fff, 0 0 48px #ff0000, 0 0 60px #ff0000;
       }
     }
     .discord-wrapper {
@@ -132,8 +128,8 @@
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 3px #fff) drop-shadow(0 0 6px #ff0000);
-      animation: pulseGlow 1.6s infinite ease-in-out;
+      animation: pulseGlow 1.2s infinite ease-in-out;
+      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 12px #ff0000);
     }
     .discord-logo {
       background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
@@ -143,7 +139,7 @@
     }
     .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
-      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 12px #ff0000);
+      filter: drop-shadow(0 0 8px #fff) drop-shadow(0 0 20px #ff0000);
     }
     #audio-controls {
       position: absolute;
@@ -157,6 +153,7 @@
       opacity: 0;
       animation: fadeIn 1s ease-out forwards;
       z-index: 10;
+      box-shadow: 0 0 12px #fff, 0 0 30px #ff0000;
     }
     #pause-button {
       background: none;
@@ -165,6 +162,8 @@
       cursor: pointer;
       margin-top: 5px;
       text-transform: lowercase;
+      font-size: 1rem;
+      animation: pulseGlow 1.2s infinite ease-in-out;
     }
     @keyframes fadeIn {
       to {
@@ -192,6 +191,14 @@
         opacity: 0;
         transform: scale(0.5) translateY(-10px);
       }
+    }
+    .glitch-out {
+      animation: glitchOut 0.3s ease forwards;
+    }
+    @keyframes glitchOut {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.4) skewX(10deg); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
@@ -222,13 +229,13 @@
 
     introScreen.addEventListener('click', function () {
       this.classList.add('hidden');
-      video.play().catch(error => console.error('Video playback failed:', error));
+      video.play().catch(console.error);
       startAnimations();
     });
 
     pauseButton.addEventListener('click', () => {
       if (isPaused) {
-        video.play().catch(error => console.error('Video playback failed:', error));
+        video.play().catch(console.error);
         pauseButton.textContent = 'Pause';
       } else {
         video.pause();
@@ -269,14 +276,14 @@
 
       const messages = ["ジュジュ", "JuJu.wtf"];
       let msgIndex = 0;
+      const titleElement = document.querySelector('.title');
       setInterval(() => {
-        const titleElement = document.querySelector('.title');
-        titleElement.style.opacity = 0;
+        titleElement.classList.add('glitch-out');
         setTimeout(() => {
           titleElement.textContent = messages[msgIndex];
-          titleElement.style.opacity = 1;
           msgIndex = (msgIndex + 1) % messages.length;
-        }, 300);
+        }, 150);
+        setTimeout(() => titleElement.classList.remove('glitch-out'), 300);
       }, 5000);
     }
   </script>
