--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       z-index: 100;
       white-space: nowrap;
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px #fff, 0 0 25px #ff0000;
+      text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000, 0 0 48px #ff0000, 0 0 72px #ff0000;
     }
     .hidden {
       opacity: 0;
@@ -72,7 +72,7 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #ff0000, 0 0 60px #ff0000;
+      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000;
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
     .title {
@@ -83,7 +83,7 @@
       width: 100%;
       position: relative;
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 48px #ff0000, 0 0 72px #ff0000;
+      text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
     }
     .glitch {
       animation: glitch-out 0.4s ease-in-out infinite;
@@ -120,10 +120,10 @@
     }
     @keyframes pulseGlow {
       0%, 100% {
-        text-shadow: 0 0 12px #fff, 0 0 24px #fff, 0 0 48px #ff0000, 0 0 80px #ff0000;
+        text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
       }
       50% {
-        text-shadow: 0 0 16px #fff, 0 0 32px #fff, 0 0 56px #ff0000, 0 0 100px #ff0000;
+        text-shadow: 0 0 16px #ff0000, 0 0 32px #ff0000, 0 0 56px #ff0000, 0 0 100px #ff0000;
       }
     }
     .discord-wrapper {
@@ -162,7 +162,7 @@
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 3px #fff) drop-shadow(0 0 6px #ff0000);
+      filter: drop-shadow(0 0 3px #ff0000) drop-shadow(0 0 6px #ff0000);
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
     .discord-logo {
@@ -173,7 +173,7 @@
     }
     .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
-      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 12px #ff0000);
+      filter: drop-shadow(0 0 5px #ff0000) drop-shadow(0 0 12px #ff0000);
     }
     #audio-controls {
       position: absolute;
@@ -190,7 +190,7 @@
     }
     #song-title {
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px #fff, 0 0 24px #fff, 0 0 48px #ff0000, 0 0 80px #ff0000;
+      text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
     }
     #pause-button {
       background: none;
@@ -215,7 +215,7 @@
       border-radius: 50%;
       pointer-events: none;
       z-index: 9999;
-      box-shadow: 0 0 10px #fff, 0 0 20px #ff0000, 0 0 30px #ff0000;
+      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000;
       animation: sparkleFade 0.6s ease-out forwards;
     }
     @keyframes sparkleFade {
@@ -311,7 +311,7 @@
           titleElement.classList.remove('glitch');
           msgIndex = (msgIndex + 1) % messages.length;
         }, 200);
-      }, 5000);
+      }, 4000); // Change to 4000ms for 4 seconds
     }
   </script>
 </body>
