--- a/index.html
+++ b/index.html
@@ -190,27 +190,30 @@
         transform: translateX(-50%) translateY(0);
       }
     }
-    .pentagram {
-      position: fixed;
+    .intro-dot {
+      position: absolute;
+      font-size: 1.2rem;
       color: red;
-      font-size: 1.5rem;
-      text-shadow: 0 0 6px #ff0000, 0 0 12px #ff0000;
-      animation: fadeAndFloat 2.5s ease-out forwards;
       pointer-events: none;
-      z-index: 1;
+      animation: flashPentagram 0.6s ease-out forwards;
+      text-shadow: 0 0 4px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000;
+      z-index: 200;
     }
-    @keyframes fadeAndFloat {
+    @keyframes flashPentagram {
       0% {
         opacity: 0;
-        transform: scale(0.5) translateY(0);
+        transform: scale(0.5) rotate(0deg);
       }
       20% {
         opacity: 1;
-        transform: scale(1.2) translateY(-5px);
+        transform: scale(1.5) rotate(30deg);
+      }
+      40% {
+        transform: scale(1) rotate(-30deg);
       }
       100% {
         opacity: 0;
-        transform: scale(1) translateY(-50px);
+        transform: scale(1.2) rotate(0deg);
       }
     }
   </style>
@@ -272,15 +275,16 @@
 
     setInterval(() => {
       if (introScreen.classList.contains('hidden')) return;
-      for (let i = 0; i < 4; i++) {
+      for (let i = 0; i < 6; i++) {
         const dot = document.createElement('div');
         dot.className = 'intro-dot';
+        dot.textContent = '⛧';
         dot.style.left = Math.random() * window.innerWidth + 'px';
         dot.style.top = Math.random() * window.innerHeight + 'px';
         introScreen.appendChild(dot);
-        setTimeout(() => dot.remove(), 800);
+        setTimeout(() => dot.remove(), 600);
       }
-    }, 120);
+    }, 150);
 
     function animateLoop(timestamp) {
       if (timestamp - lastTitleUpdate > 200) {
@@ -301,22 +305,6 @@
 
       requestAnimationFrame(animateLoop);
     }
-
-    function spawnPentagram() {
-      const pentagram = document.createElement('div');
-      pentagram.className = 'pentagram';
-      pentagram.textContent = '⛧';
-      pentagram.style.left = Math.random() * window.innerWidth + 'px';
-      pentagram.style.top = Math.random() * window.innerHeight + 'px';
-      document.body.appendChild(pentagram);
-      setTimeout(() => pentagram.remove(), 2500);
-    }
-
-    setInterval(() => {
-      for (let i = 0; i < 3; i++) {
-        spawnPentagram();
-      }
-    }, 300);
   </script>
 </body>
 </html>
